working versions of grch37 and t2t now made

--- a/notebooks/1_1_variant_detection_reference_building.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building.ipynb
@@ -34,6 +34,7 @@
     "verbose=True\n",
     "w=54  # window size for varseek build (should be at least 1 less than kallisto k)\n",
     "k=59\n",
+    "k_standard = 31\n",
     "threads = 8\n",
     "remove_Ns = True\n",
     "strandedness = False  # strandedness for gget mutate and the building of the kb index (True = strandedness matters i.e., treat f and rc as 2 different sequences; False = strandedness does not matter i.e., treat f and rc as the same \n",
@@ -45,7 +46,7 @@
     "\n",
     "# vk info\n",
     "columns_to_include=\"all\"\n",
-    "dlist_reference_source = \"t2t\"  # ensembl_grchNUMBER_releaseNUMBER or t2t - eg ensembl_grch37_release93\n",
+    "dlist_reference_source = \"ensembl_grch37_release93\"  # ensembl_grchNUMBER_releaseNUMBER or t2t - eg ensembl_grch37_release93\n",
     "near_splice_junction_threshold=10\n",
     "save_exploded_df=True\n",
     "\n",
@@ -71,7 +72,7 @@
     "\n",
     "# Paths\n",
     "out_dir_base = \"/home/jrich/data/varseek_data_fresh\"\n",
-    "run_name = \"vk_build_pipeline_t2t_nov16\"\n",
+    "run_name = \"vk_build_pipeline_grch37_nov16\"\n",
     "\n",
     "# vk build\n",
     "mutations = \"/home/jrich/data/varseek_data_fresh/reference/cosmic/CancerMutationCensus_AllData_Tsv_v100_GRCh37/CancerMutationCensus_AllData_v100_GRCh37_mutation_workflow_with_cdna.csv\"  # \"cosmic_cmc\"  # file path to mutations csv/tsv file OR one of the supported databases\n",
@@ -128,6 +129,9 @@
     "dlist_fasta_vk_filter = os.path.join(out_dir_notebook, \"dlist_filtered.fa\")\n",
     "t2g_vk_filter = os.path.join(out_dir_notebook, \"t2g_filtered.txt\")\n",
     "id_to_header_csv_vk_filter = os.path.join(out_dir_notebook, \"id_to_header_mapping_filtered.csv\")\n",
+    "wt_mcrs_index = os.path.join(out_dir_notebook, \"wt_mcrs_reference.idx\")\n",
+    "wt_mcrs_fasta_vk_filter = os.path.join(out_dir_notebook, \"wt_mcrs_filtered.fa\")\n",
+    "t2g_wt_vk_filter = os.path.join(out_dir_notebook, \"t2g_wt_filtered.txt\")\n",
     "\n",
     "if dlist:\n",
     "    dlist_kb_argument = dlist_fasta_vk_filter\n",
@@ -164,6 +168,7 @@
     "    cosmic_email = os.getenv('COSMIC_EMAIL'),\n",
     "    cosmic_password = os.getenv('COSMIC_PASSWORD'),\n",
     "    create_t2g=True,\n",
+    "    create_wt_mcrs_counterpart_fa=True,\n",
     "    update_df=True,\n",
     "    update_df_out=update_df_out,\n",
     "    verbose=verbose,\n",
@@ -232,16 +237,20 @@
     "# %%time\n",
     "vk.filter(mutation_metadata_df_path = mutation_metadata_df_out_path_vk_info,\n",
     "          output_mcrs_fasta=mcrs_fasta_vk_filter,\n",
+    "          output_wt_mcrs_fa=wt_mcrs_fasta_vk_filter,\n",
     "          output_metadata_df=output_metadata_df_vk_filter,\n",
     "          dlist_fasta=dlist_fasta,\n",
     "          output_dlist_fasta=dlist_fasta_vk_filter,\n",
     "          create_t2g=True,\n",
     "          output_t2g=t2g_vk_filter,\n",
+    "          output_t2g_wt=t2g_wt_vk_filter,\n",
     "          id_to_header_csv=id_to_header_csv,\n",
     "          output_id_to_header_csv=id_to_header_csv_vk_filter,\n",
     "          verbose=True,\n",
     "          return_df=False,\n",
-    "          filters = fasta_filters)"
+    "          filters = fasta_filters)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -264,10 +273,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-11-19 11:32:43,683]    INFO [ref_custom] Indexing /home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mcrs_filtered.fa to /home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mutation_reference_31.idx\n",
+      "[2024-11-19 11:45:08,280]    INFO [ref_custom] Finished creating custom index\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mutation_index_31 = f\"{out_dir_notebook}/mutation_reference_31.idx\"\n",
+    "# if not os.path.exists(mutation_index_31):\n",
+    "#     kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(16), \"-i\", mutation_index_31, \"--d-list\", dlist_kb_argument, \"-k\", str(31), mcrs_fasta_vk_filter]\n",
+    "#     subprocess.run(kb_ref_command, check=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optional: kb ref on T2T reference genome"
+    "Sam but for wt mcrs"
    ]
   },
   {
@@ -276,12 +306,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # import os\n",
-    "# # import subprocess\n",
-    "# # out_dir_base = \"/home/jrich/data/varseek_data_fresh\"\n",
-    "# # reference_out_dir = os.path.join(out_dir_base, \"reference\")\n",
-    "# # threads = 16\n",
-    "# # k = 31\n",
+    "# %%time\n",
+    "if not os.path.exists(wt_mcrs_index) and os.path.exists(wt_mcrs_fasta_vk_filter):\n",
+    "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", wt_mcrs_index, \"--d-list\", \"None\", \"-k\", str(k), wt_mcrs_fasta_vk_filter]\n",
+    "    subprocess.run(kb_ref_command, check=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optional: kb ref on T2T reference genome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-11-18 11:22:04,574]    INFO [ref] Preparing /home/jrich/data/varseek_data_fresh/reference/T2T/GCF_009914755.1/GCF_009914755.1_T2T-CHM13v2.0_genomic.fna, /home/jrich/data/varseek_data_fresh/reference/T2T/GCF_009914755.1/genomic.gtf\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import os\n",
+    "# import subprocess\n",
+    "# out_dir_base = \"/home/jrich/data/varseek_data_fresh\"\n",
+    "# reference_out_dir = os.path.join(out_dir_base, \"reference\")\n",
+    "# threads = 16\n",
+    "# k_standard = 31\n",
     "\n",
     "# from varseek.utils import download_t2t_reference_files\n",
     "# t2t_folder = f\"{reference_out_dir}/T2T/GCF_009914755.1\"\n",
@@ -290,7 +347,8 @@
     "# standard_t2g = f\"{t2t_kb_folder}/t2g.txt\"\n",
     "# standard_f1 = f\"{t2t_kb_folder}/f1.fa\"\n",
     "\n",
-    "# if not os.path.exists(standard_index) or not os.path.exists(standard_t2g): #     os.makedirs(t2t_kb_folder, exist_ok=True)\n",
+    "# if not os.path.exists(standard_index) or not os.path.exists(standard_t2g):\n",
+    "#     os.makedirs(t2t_kb_folder, exist_ok=True)\n",
     "#     t2t_genome = f\"{t2t_folder}/GCF_009914755.1_T2T-CHM13v2.0_genomic.fna\"\n",
     "#     t2t_gtf = f\"{t2t_folder}/genomic.gtf\"\n",
     "    \n",
@@ -298,7 +356,7 @@
     "#         os.makedirs(t2t_folder, exist_ok=True)\n",
     "#         t2t_genome, t2t_cdna, t2t_gtf = download_t2t_reference_files(t2t_folder)\n",
     "\n",
-    "#     kb_ref_standard_command = f\"kb ref -k {k} -i {standard_index} -g {standard_t2g} -f1 {standard_f1} -t {threads} {t2t_genome} {t2t_gtf}\"\n",
+    "#     kb_ref_standard_command = f\"kb ref -k {k_standard} -i {standard_index} -g {standard_t2g} -f1 {standard_f1} -t {threads} {t2t_genome} {t2t_gtf}\"\n",
     "#     result = subprocess.run(kb_ref_standard_command, shell=True, check=True)"
    ]
   },
@@ -321,7 +379,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kvar",
+   "display_name": "varseek2",
    "language": "python",
    "name": "python3"
   },
