--- a/notebooks/1_0_vk_ref_count_tutorial.ipynb
+++ b/notebooks/1_0_vk_ref_count_tutorial.ipynb
@@ -131,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "varseek2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -149,5 +149,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
