--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -914,7 +914,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kvar",
+   "display_name": "varseek2",
    "language": "python",
    "name": "python3"
   },
