--- a/notebooks/2_variant_simulation_200_working.ipynb
+++ b/notebooks/2_variant_simulation_200_working.ipynb
@@ -20,23 +20,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -2504,7 +2487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "varseek2",
    "language": "python",
    "name": "python3"
   },
@@ -2518,7 +2501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
