sorted bus df issues; added vk build arguments for custom k and being more careful with insertions

--- a/notebooks/1_1_variant_detection_reference_building_t2t.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building_t2t.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,7 @@
     "\n",
     "# vk build\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
+    "insertion_size_limit = None\n",
     "# os.environ['COSMIC_EMAIL'] = 'your_email'  # to avoid being prompted for email in varseek build\n",
     "# os.environ['COSMIC_PASSWORD'] = 'your_password'  # to avoid being prompted for password in varseek build\n",
     "\n",
@@ -173,6 +174,8 @@
     "    out=out_dir_notebook,\n",
     "    reference_out=reference_out_dir,\n",
     "    w=w,\n",
+    "    k=k,\n",
+    "    insertion_size_limit=insertion_size_limit,\n",
     "    remove_seqs_with_wt_kmers=True,\n",
     "    optimize_flanking_regions=True,\n",
     "    min_seq_len=k,\n",
