--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -377,7 +377,8 @@
     "\n",
     "true_set_crude = set(read_df.loc[read_df['mutant_read'], 'read_header'])\n",
     "positive_set_crude = set(read_df.loc[read_df['aligned_somewhere'], 'read_header'])\n",
-    "create_venn_diagram(true_set_crude, positive_set_crude, TN = metric_dictionary_reads_crude['TN'], mm = n_multimapped, out_path = f\"{plot_output_folder}/venn_diagram_read_crude.png\")\n",
+    "# don't show mm here, because mm is counted as a TP for crude\n",
+    "create_venn_diagram(true_set_crude, positive_set_crude, TN = metric_dictionary_reads_crude['TN'], mm = None, out_path = f\"{plot_output_folder}/venn_diagram_read_crude.png\")\n",
     "\n",
     "create_stratified_metric_bar_plot(read_df, 'mcrs_mutation_type', 'accuracy', overall_metric = metric_dictionary_reads_crude['accuracy'], log_x_axis = False, display_numbers = True, crude = True, out_path = f\"{plot_output_folder}/accuracy_vs_mcrs_mutation_type_read_perspective_crude.png\")"
    ]
@@ -610,26 +611,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # # uncomment this cell if making adata comparisons after the notebook has concluded\n",
+    "# # read_df = pd.read_csv(read_df_out_updated)\n",
+    "# # unique_mcrs_df = pd.read_csv(unique_mcrs_df_out)\n",
+    "\n",
+    "# bus_df = pd.read_csv(\"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_500000mcrs_k59_nov16/kb_count_out_mm/bus_df.csv\", usecols = [\"transcript_names_final\", \"counted_in_count_matrix\", \"count\"])\n",
+    "\n",
+    "# adata_path = f\"{kb_count_out}/counts_unfiltered/adata.h5ad\"\n",
+    "# adata = ad.read_h5ad(adata_path)\n",
+    "\n",
+    "# # Find the indices of non-zero values in adata.X\n",
+    "# non_zero_indices = np.nonzero(adata.X)\n",
+    "\n",
+    "# # Get the non-zero values\n",
+    "# non_zero_values = np.squeeze(np.asarray(adata.X[non_zero_indices])).astype(int)\n",
+    "\n",
+    "# # Get the corresponding gene names\n",
+    "# mcrs_ids = adata.var.index[non_zero_indices[1]].to_numpy().flatten()\n",
+    "\n",
+    "# mcrs_ids = mcrs_ids.astype(str)\n",
+    "\n",
+    "# # Create a DataFrame\n",
+    "# adata_df = pd.DataFrame({\n",
+    "#     'mcrs_id': mcrs_ids,\n",
+    "#     'number_of_reads_aligned_to_this_item': non_zero_values\n",
+    "# })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from tqdm import tqdm\n",
+    "# tqdm.pandas()\n",
+    "\n",
     "bus_df_subset = bus_df[[\"transcript_names_final\", \"counted_in_count_matrix\", \"count\"]]\n",
+    "\n",
+    "if isinstance(bus_df_subset['transcript_names_final'][0], str):\n",
+    "    from varseek.utils import safe_literal_eval\n",
+    "    bus_df_subset[\"transcript_names_final\"] = bus_df_subset[\"transcript_names_final\"].apply(safe_literal_eval)\n",
     "\n",
     "bus_df_subset['transcript_names_final'] = bus_df_subset['transcript_names_final'].apply(\n",
     "    lambda x: x[0] if isinstance(x, list) and x else x\n",
     ")\n",
     "\n",
+    "bus_df_subset['count_recorded_in_count_matrix'] = np.where(\n",
+    "    bus_df_subset['counted_in_count_matrix'],  # Condition\n",
+    "    bus_df_subset['count'],                   # Value if True\n",
+    "    0                                  # Value if False\n",
+    ")\n",
+    "\n",
+    "bus_df_subset.drop(columns=['counted_in_count_matrix', 'count'], inplace=True)\n",
+    "\n",
     "# Group by the string representation\n",
     "bus_df_subset_grouped = bus_df_subset.groupby('transcript_names_final', as_index=False).agg({\n",
-    "    'counted_in_count_matrix': 'first',\n",
-    "    'count': 'sum'\n",
+    "    'count_recorded_in_count_matrix': 'sum',\n",
     "})\n",
     "\n",
-    "# Set values in 'count' to 0 where 'counted_in_count_matrix' is False\n",
-    "bus_df_subset_grouped.loc[bus_df_subset_grouped['counted_in_count_matrix'] == False, 'count'] = 0\n",
+    "# # Set values in 'count' to 0 where 'counted_in_count_matrix' is False\n",
+    "# bus_df_subset_grouped.loc[bus_df_subset_grouped['counted_in_count_matrix'] == False, 'count'] = 0\n",
     "\n",
-    "bus_df_subset_grouped.rename(columns={\"transcript_names_final\": \"mcrs_id\", \"count\": \"count_bus\"}, inplace=True)\n",
+    "bus_df_subset_grouped.rename(columns={\"transcript_names_final\": \"mcrs_id\", \"count_recorded_in_count_matrix\": \"count_bus\"}, inplace=True)\n",
+    "\n",
     "\n",
     "bus_df_subset_grouped = bus_df_subset_grouped.merge(adata_df, on='mcrs_id', how='left')\n",
     "bus_df_subset_grouped = bus_df_subset_grouped.rename(columns={'number_of_reads_aligned_to_this_item': 'count_adata'})\n",
     "\n",
+    "\n",
+    "bus_df_subset_grouped['count_adata'] = bus_df_subset_grouped['count_adata'].fillna(0)\n",
+    "bus_df_subset_grouped['count_bus'] = bus_df_subset_grouped['count_bus'].fillna(0)\n",
     "\n",
     "mismatch_count = (bus_df_subset_grouped['count_bus'] != bus_df_subset_grouped['count_adata']).sum()\n",
     "print(f\"Number of mismatches between BUS file and adata: {mismatch_count}\")"
@@ -703,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,8 +772,8 @@
     "# Fill NaN values with empty lists in case there are no matching read headers for some mcrs_header values\n",
     "unique_mcrs_df['reads_mapped_to_this_reference_item'] = unique_mcrs_df['reads_mapped_to_this_reference_item'].apply(lambda x: x if isinstance(x, list) else [])\n",
     "\n",
-    "unique_mcrs_df['number_of_MUTANT_reads_belonging_to_the_mcrs_item_that_aligned_somewhere'] = unique_mcrs_df['number_of_MUTANT_reads_belonging_to_the_mcrs_item_that_aligned_somewhere'].astype(bool)\n",
-    "unique_mcrs_df['number_of_WT_reads_belonging_to_the_mcrs_item_that_aligned_somewhere'] = unique_mcrs_df['number_of_WT_reads_belonging_to_the_mcrs_item_that_aligned_somewhere'].astype(bool)"
+    "unique_mcrs_df['contained_any_MUTANT_reads_belonging_to_the_mcrs_item_that_aligned_somewhere'] = unique_mcrs_df['number_of_MUTANT_reads_belonging_to_the_mcrs_item_that_aligned_somewhere'].astype(bool)\n",
+    "unique_mcrs_df['contained_any_WT_reads_belonging_to_the_mcrs_item_that_aligned_somewhere'] = unique_mcrs_df['number_of_WT_reads_belonging_to_the_mcrs_item_that_aligned_somewhere'].astype(bool)"
    ]
   },
   {
